--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ElegantCoding</title>
 
-    <link rel="stylesheet" href="/styles/style.css">
+    <link rel="stylesheet" href="styles/style.css">
 
 </head>
 
@@ -60,61 +60,61 @@
         <div class="start-your-learning">
             <div class="technology-stack">
                 <div class="technology-stack-img">
-                    <img src="/images/technology-stacks/html.png" alt="HTML">
+                    <img src="images/technology-stacks/html.png" alt="HTML">
                 </div>
                 <a href="html-tutorials.html">Start learning HTML</a>
             </div>
             <div class="technology-stack">
                 <div class="technology-stack-img">
-                    <img src="/images/technology-stacks/css.png" alt="CSS">
+                    <img src="images/technology-stacks/css.png" alt="CSS">
                 </div>
                 <a href="css-tutorials.html">Start learning CSS</a>
             </div>
             <div class="technology-stack">
                 <div class="technology-stack-img">
-                    <img src="/images/technology-stacks/JS.png" alt="JavaScript">
+                    <img src="images/technology-stacks/JS.png" alt="JavaScript">
                 </div>
                 <a href="/javascript/javascript.html">Start learning JavaScript</a>
             </div>
             <div class="technology-stack">
                 <div class="technology-stack-img">
-                    <img src="/images/technology-stacks/mysql.png" alt="MySQL">
+                    <img src="images/technology-stacks/mysql.png" alt="MySQL">
                 </div>
                 <a href="mysql-tutorials.html">Start learning MySQL</a>
             </div>
             <div class="technology-stack">
                 <div class="technology-stack-img">
-                    <img src="/images/technology-stacks/php.png" alt="PHP">
+                    <img src="images/technology-stacks/php.png" alt="PHP">
                 </div>
                 <a href="php-tutorials.html">Start learning PHP</a>
             </div>
             <div class="technology-stack">
                 <div class="technology-stack-img">
-                    <img src="/images/technology-stacks/angularjs.png" alt="AngularJS">
+                    <img src="images/technology-stacks/angularjs.png" alt="AngularJS">
                 </div>
                 <a href="angularjs-tutorials.html">Start learning AngularJS</a>
             </div>
             <div class="technology-stack">
                 <div class="technology-stack-img">
-                    <img src="/images/technology-stacks/java.png" alt="Java">
+                    <img src="images/technology-stacks/java.png" alt="Java">
                 </div>
                 <a href="java-tutorials.html">Start learning Java</a>
             </div>
             <div class="technology-stack">
                 <div class="technology-stack-img">
-                    <img src="/images/technology-stacks/expressjs.png" alt="ExpressJS">
+                    <img src="images/technology-stacks/expressjs.png" alt="ExpressJS">
                 </div>
                 <a href="expressjs-tutorials.html">Start learning ExpressJS</a>
             </div>
             <div class="technology-stack">
                 <div class="technology-stack-img">
-                    <img src="/images/technology-stacks/reactjs.png" alt="ReactJS">
+                    <img src="images/technology-stacks/reactjs.png" alt="ReactJS">
                 </div>
                 <a href="reactjs-tutorials.html">Start learning ReactJS</a>
             </div>
             <div class="technology-stack">
                 <div class="technology-stack-img">
-                    <img src="/images/technology-stacks/nodejs.png" alt="NodeJS">
+                    <img src="images/technology-stacks/nodejs.png" alt="NodeJS">
                 </div>
                 <a href="nodejs-tutorials.html">Start learning NodeJS</a>
             </div>
@@ -141,13 +141,13 @@
             <p>&copy; 2023 ElegantCoding.com</p>
             <div class="social-icons">
                 <a href="https://www.github.com/harsh9899100" aria-label="github" target="_blank">
-                    <img src="/images/social/github.png" alt="GitHub">
+                    <img src="images/social/github.png" alt="GitHub">
                 </a>
                 <a href="https://www.twitter.com/harsh9899100" aria-label="twitter" target="_blank">
-                    <img src="/images/social/twitter.png" alt="Twitter">
+                    <img src="images/social/twitter.png" alt="Twitter">
                 </a>
                 <a href="https://www.instagram.com/harsh26.x" aria-label="instagram" target="_blank">
-                    <img src="/images/social/instagram.png" alt="Instagram">
+                    <img src="images/social/instagram.png" alt="Instagram">
                 </a>
             </div>
         </div>
