--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 <div class="technology-stack-img">
                     <img src="images/technology-stacks/JS.png" alt="JavaScript">
                 </div>
-                <a href="/javascript/javascript.html">Start learning JavaScript</a>
+                <a href="javascript/javascript.html">Start learning JavaScript</a>
             </div>
             <div class="technology-stack">
                 <div class="technology-stack-img">
