--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             </div>
         </div>
         <div class="image-section">
-            <img class="image" src="/images/coder-image-1.png">
+            <img class="image" src="images/coder-image-1.png">
             <div class="overlay"></div>
         </div>
     </div>
