--- a/javascript/javascript.html
+++ b/javascript/javascript.html
@@ -6,9 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ElegantCoding Header</title>
 
-    <link rel="stylesheet" href="styles/style.css">
-    <link rel="stylesheet" href="styles/elegant-snippet.css">
-    <script src="javascripts/Snippet-script.js"></script> // for the snippet
+    <link rel="stylesheet" href="../styles/style.css">
+    <link rel="stylesheet" href="../styles/elegant-snippet.css">
 
     <style>
         /* ------------------------------------------------------------------------- */
@@ -152,7 +151,7 @@
         </div>
 
         <div class="my-website-name-container">
-            <a class="my-website-name" href="Elegant-Coding/index.html">ElegantCoding</a>
+            <a class="my-website-name" href="/index.html">ElegantCoding</a>
         </div>
 
     </header>
@@ -242,8 +241,7 @@
 
         <h2>ElegantCoding</h2>
     </nav>
-
-    <script src="/javascripts/side-navigation.js"></script> // for entire Site
+    <script src="../javascripts/side-navigation.js"></script>
 
     <main>
         <!-- Your main content goes here -->
@@ -286,6 +284,8 @@
 
         </section>
 
+        <script src="../javascripts/Snippet-script.js"></script>   <!-- for the snippet -->
+
     </main>
 
     <div style="height: 500px;background-color: black;"></div>
@@ -301,13 +301,13 @@
             <p>&copy; 2023 ElegantCoding.com</p>
             <div class="social-icons">
                 <a href="https://www.github.com/harsh9899100" aria-label="github" target="_blank">
-                    <img src="images/social/github.png" alt="GitHub">
+                    <img src="../images/social/github.png" alt="GitHub">
                 </a>
                 <a href="https://www.twitter.com/harsh9899100" aria-label="twitter" target="_blank">
-                    <img src="images/social/twitter.png" alt="Twitter">
+                    <img src="../images/social/twitter.png" alt="Twitter">
                 </a>
                 <a href="https://www.instagram.com/harsh26.x" aria-label="instagram" target="_blank">
-                    <img src="images/social/instagram.png" alt="Instagram">
+                    <img src="../images/social/instagram.png" alt="Instagram">
                 </a>
             </div>
         </div>
