--- a/javascript/javascript.html
+++ b/javascript/javascript.html
@@ -8,150 +8,18 @@
 
     <link rel="stylesheet" href="../styles/style.css">
     <link rel="stylesheet" href="../styles/elegant-snippet.css">
-
-    <style>
-        /* ------------------------------------------------------------------------- */
-
-        /* Style the header with a sticky behavior */
-        #Elegant-coding-header {
-            position: fixed;
-            top: 0;
-            width: 100%;
-            background-color: white;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
-            /* Box shadow properties chhe*/
-            z-index: 100;
-            /* z-index ne nav ni z-index karta ochhi rakhic hhe */
-            padding: 20px;
-        }
-
-        .my-website-name-container {
-            text-align: center;
-        }
-
-        .my-website-name {
-            font-size: 24px;
-            margin: 0;
-            color: #6b46c1;
-            font-weight: 700;
-        }
-
-        .nav-menu-button-container {
-            float: left;
-        }
-
-        #nav-menu-button {
-            background-color: #6b46c16e;
-            border: 1px solid #6b46c16e;
-            color: #000000;
-            border-radius: 5px;
-            font-size: 16px;
-            cursor: pointer;
-            padding: 10px 20px;
-        }
-
-        /* ------------------------------------------------------------------------- side navigation*/
-
-        /* Style the side navigation */
-        #side-nav {
-            width: 250px;
-            position: fixed;
-            top: 0;
-            left: -250px;
-            height: 100%;
-            background-color: #12181f;
-            /* Updated background color */
-            z-index: 101;
-            overflow-x: hidden;
-            transition: 0.3s;
-        }
-
-        #nav-close-button-container {
-            padding: 20px 20px 50px 0px;
-        }
-
-        /* Style the close button inside the side navigation */
-        #nav-close-button {
-            color: #ffffff;
-            background: hsla(258, 50%, 52%, 0.431);
-            border: 1px solid #6b46c16e;
-            border-radius: 5px;
-            cursor: pointer;
-            padding: 10px 20px;
-            float: right;
-        }
-
-        #side-nav h3 {
-            color: #e6ecf2;
-            padding: 10px;
-            border-bottom: 1px solid white;
-            font-size: 20px;
-            font-weight: 600;
-        }
-
-        #side-nav h2 {
-            color: #6b46c16e;
-            padding: 10px;
-            font-size: 25px;
-            font-weight: 600;
-            text-shadow:1px 0px 1px #00f2ff;
-        }
-
-        /* Style the side navigation links */
-        #side-nav ul {
-            list-style: none;
-            width: 90%;
-            padding: 0% 5%;
-        }
-
-        #side-nav li {
-            padding: 5px 20px;
-            border-left: 5px solid transparent;
-            border-radius: 5px;
-            margin-bottom: 2px;
-        }
-
-        #side-nav li:hover {
-            border-left: 5px solid #6b46c1;
-            background-color: #6b46c16e;
-            cursor: pointer;
-        }
-
-        #side-nav a {
-            text-decoration: none;
-            color: #fff;
-            /* width: 150px; */
-        }
-
-        #side-nav a:hover {
-            color: #fff;
-        }
-
-        /* ------------------------------------------------------------------------- */
-
-        /* Main content container */
-        main {
-            padding: 50px;
-            transition: 0.3s;
-            z-index: 100;
-        }
-
-        @media only screen and (max-width: 500px) {
-            main {
-                padding: 10px;
-            }
-        }
-    </style>
+    <link rel="stylesheet" href="../styles/elegantCoding.css">
+    <link rel="stylesheet" href="javascript.css">
 </head>
 
 <body>
     <header id="Elegant-coding-header">
         <div class="nav-menu-button-container">
-            <button id="nav-menu-button">Menu</button>
+            <button id="nav-menu-button">&#9776</button> <!-- open button -->
         </div>
 
         <div class="my-website-name-container">
-            <a class="my-website-name" href="/index.html">ElegantCoding</a>
+            <a class="my-website-name" href="/index.html">ElegantCoding</a><span style="color: black;border: 1px solid #d2d2d2;padding: 0px 20px 5px;border-radius: 5px;background-color: aliceblue;margin: 0px 10px;">Javascript</span>
         </div>
 
     </header>
@@ -159,7 +27,7 @@
     <nav id="side-nav">
 
         <div id="nav-close-button-container">
-            <button id="nav-close-button">Close</button>
+            <button id="nav-close-button">&#10006</button> <!-- close button -->
         </div>
 
         <h3>INTRODUCTION</h3>
@@ -246,12 +114,11 @@
     <main>
         <!-- Your main content goes here -->
 
-        <div class="text-content-container-1"
-            style="max-width: 1000px;background-color: #e8fff0cf; margin: 30px auto; padding: 50px 30px;">
-            <h1>Javascript</h1>
+        <div class="text-content-container-1">
+            <h1> &#10052; <span style="color: black;">Welcome to </span>Javascript <span style="color: black;">World </span>&#10052</h1>
         </div>
-        <div class="text-content-container-2"
-            style="max-width: 1000px;background-color: #e6ecf2; margin: 30px auto; padding: 50px 30px;">
+
+        <div class="text-content-container-2">
             <p>JavaScript is the world's most popular programming language.</p>
 
             <p>JavaScript is the programming language of the Web.</p>
@@ -259,6 +126,28 @@
             <p>JavaScript is easy to learn.</p>
 
             <p>This tutorial will teach you JavaScript from basic to advanced.</p>
+            </p>
+        </div>
+
+        <div class="text-content-container-3">
+
+            <h1>Javascript is best</h1>
+
+            <h2>Javascript is best</h2>
+            
+            <h3>Javascript is best</h3>
+
+            <p>JavaScript is the world's most popular programming language.</p>
+            <p>JavaScript is the programming language of the Web.</p>
+            <p>JavaScript is easy to learn.</p>
+            <p>This tutorial will teach you JavaScript from basic to advanced.</p>
+
+            <ul>
+                <li>JavaScript is the world's most popular programming language.</li>
+            <li>JavaScript is the programming language of the Web.</li>
+            <li>JavaScript is easy to learn.</li>
+            <li>This tutorial will teach you JavaScript from basic to advanced.</li>
+            </ul>
             </p>
         </div>
 
