--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>ElegantCoding</title>
 
     <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/elegantCoding.css">
 
 </head>
 
@@ -44,8 +45,8 @@
             <p>I know the importance of learning to code, and I want to make it accessible to everyone. That's why I'm
                 sharing my knowledge and experience with you.</p>
             <div class="main-section-buttons">
-                <button class="free-courses-button">Free Courses</button><button
-                    class="explore-portfolio-button">Explore Portfolio</button>
+                <button class="free-courses-button">Free Courses</button>
+                <a href="personal-portfolio/my-portfolio.html"><button class="explore-portfolio-button" >Explore Portfolio</button></a>
             </div>
         </div>
         <div class="image-section">
