--- a/personal-portfolio/my-portfolio.html
+++ b/personal-portfolio/my-portfolio.html
@@ -51,8 +51,8 @@
                 <h1>Hey! 👋</h1>
                 <h2>I'm Harsh Patel</h2>
                 <h3>"Creating Elegant Solutions with Code, Transforming Ideas into Functional Software, and Delivering User-Centric Applications"</h3>
-                <a class="portfolio-hero-button" href="https://github.com/yourusername">GitHub</a>
-                <a class="portfolio-hero-button" href="https://yourwebsite.com/elegantcoding">Explore ElegantCoding</a>
+                <a class="portfolio-hero-button" href="https://github.com/harsh9899100">GitHub</a>
+                <a class="portfolio-hero-button" href="https://harsh9899100.github.io/Elegant-Coding/">Explore ElegantCoding</a>
             </div>
         </div>
 
