--- a/personal-portfolio/my-portfolio.html
+++ b/personal-portfolio/my-portfolio.html
@@ -51,8 +51,8 @@
                 <h1>Hey! 👋</h1>
                 <h2>I'm Harsh Patel</h2>
                 <h3>"Creating Elegant Solutions with Code, Transforming Ideas into Functional Software, and Delivering User-Centric Applications"</h3>
-                <a class="portfolio-hero-button" href="https://github.com/harsh9899100">GitHub</a>
-                <a class="portfolio-hero-button" href="https://harsh9899100.github.io/Elegant-Coding/">Explore ElegantCoding</a>
+                <a class="portfolio-hero-button" href="https://github.com/yourusername">GitHub</a>
+                <a class="portfolio-hero-button" href="https://yourwebsite.com/elegantcoding">Explore ElegantCoding</a>
             </div>
         </div>
 
@@ -113,17 +113,17 @@
 
         <div class="education-container">
             <p class="degree-logo">🏫</p>
-            <p class="degree-name">12th Board</p>
+            <p class="degree-name">Higher Secondary School Certificate</p>
             <p class="branch-name">12th Science</p>
-            <p class="pursuing-location">GHSEB- Nalanda School</p>
+            <p class="pursuing-location">Nalanda School</p>
             <p class="education-result">70% [2020]</p>
         </div>
 
         <div class="education-container">
             <p class="degree-logo">📑</p>
-            <p class="degree-name">Secondary School</p>
+            <p class="degree-name">Secondary School Education</p>
             <p class="branch-name">10th Board</p>
-            <p class="pursuing-location">GSEB -Nalanda School</p>
+            <p class="pursuing-location">Nalanda School</p>
             <p class="education-result">87.83% [2018]</p>
         </div>
     </div>
