--- a/personal-portfolio/my-portfolio.html
+++ b/personal-portfolio/my-portfolio.html
@@ -30,7 +30,6 @@
             <button id="nav-close-button">&#10006</button> <!-- close button -->
         </div>
 
-
         <h3>🔖 Menu</h3>
         <ul>
             <li><a href="#">Home</a></li>
@@ -48,11 +47,11 @@
     <section class="highlight-section">
         <div class="portfolio-hero-section">
             <div class="main-text-container">
-                <h1>Hey! 👋</h1>
+                <h1>Hey!👋</h1>
                 <h2>I'm Harsh Patel</h2>
                 <h3>"Creating Elegant Solutions with Code, Transforming Ideas into Functional Software, and Delivering User-Centric Applications"</h3>
-                <a class="portfolio-hero-button" href="https://github.com/yourusername">GitHub</a>
-                <a class="portfolio-hero-button" href="https://yourwebsite.com/elegantcoding">Explore ElegantCoding</a>
+                <a class="portfolio-hero-button" href="https://github.com/harsh9899100">GitHub</a>
+                <a class="portfolio-hero-button" href="../index.html">Explore ElegantCoding</a>
             </div>
         </div>
 
@@ -258,7 +257,7 @@
             </div>
 
             <div class="contact-container">
-                <p class="contact-logo"><a href="https://mail.google.com/mail/u/0/#inbox"><img src="../images/social/gmail.png" alt="" srcset=""></a></p>
+                <p class="contact-logo"><a href="https://mail.google.com/mail/u/0/?hl=ru#search/harsh9899100%40gmail.com?compose=new"><img src="../images/social/gmail.png" alt="" srcset=""></a></p>
             </div>
 
             <div class="contact-container">
@@ -266,7 +265,7 @@
             </div>
 
             <div class="contact-container">
-                <p class="contact-logo"><a href="https://mail.google.com/mail/u/0/#inbox"><img src="../images/social/telegram.png" alt="" srcset=""></a></p>
+                <p class="contact-logo"><a href="https://t.me/harsh9899100"><img src="../images/social/telegram.png" alt="" srcset=""></a></p>
             </div>
     
         </div>
