--- a/personal-portfolio/my-portfolio.html
+++ b/personal-portfolio/my-portfolio.html
@@ -33,11 +33,11 @@
         <h3>🔖 Menu</h3>
         <ul>
             <li><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
+            <li><a href="#about-section">About</a></li>
             <li><a href="#">Skills</a></li>
-            <li><a href="#">Educations</a></li>
-            <li><a href="#">Projects</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="#portfolio-education-details">Educations</a></li>
+            <li><a href="#projects-container">Projects</a></li>
+            <li><a href="#contact-details-section">Contact</a></li>
         </ul>
 
         <h2>&copy; ElegantCoding</h2>
@@ -60,7 +60,7 @@
 
     <main>
 
-        <section class="about-section">
+        <section class="about-section" id="about-section">
 
             <h1>&#10022; About Me &#10022;</h1>
             <div class="about-container">
@@ -96,7 +96,7 @@
 </section>
 
 
-<section class="portfolio-education-details">
+<section class="portfolio-education-details" id="portfolio-education-details">
     <h1>&#10022; Education Details &#10022;</h1>
 
     <h2 class="current-status">I Am Student &#9998;</h2>
@@ -112,7 +112,7 @@
 
         <div class="education-container">
             <p class="degree-logo">🏫</p>
-            <p class="degree-name">Higher Secondary School Certificate</p>
+            <p class="degree-name">Higher Secondary Certificate</p>
             <p class="branch-name">12th Science</p>
             <p class="pursuing-location">Nalanda School</p>
             <p class="education-result">70% [2020]</p>
@@ -120,7 +120,7 @@
 
         <div class="education-container">
             <p class="degree-logo">📑</p>
-            <p class="degree-name">Secondary School Education</p>
+            <p class="degree-name">Secondary School Certificate</p>
             <p class="branch-name">10th Board</p>
             <p class="pursuing-location">Nalanda School</p>
             <p class="education-result">87.83% [2018]</p>
@@ -130,7 +130,7 @@
 
 <main>
 
-    <section class="projects-container">
+    <section class="projects-container" id="projects-container">
 
             <h1>&#10022; Projects &#10022;</h1>
 
@@ -244,7 +244,7 @@
 
     </main>
 
-    <section class="contact-details-section">
+    <section class="contact-details-section" id="contact-details-section">
         <h1>&#10022; Contact Here &#10022;</h1>
     
         <div class="contact-details-container">
