--- a/personal-portfolio/my-portfolio.html
+++ b/personal-portfolio/my-portfolio.html
@@ -40,6 +40,8 @@
             <li><a href="#contact-details-section">Contact</a></li>
         </ul>
 
+        <div style="padding: 50px 0px 0px 0px;"><img src="../images/HK.png" alt="" srcset="" style="height: 245px;"></div>
+
         <h2>&copy; ElegantCoding</h2>
     </nav>
     <script src="../javascripts/side-navigation.js"></script>
