Side nav Script Added

--- a/courses/Node.js + MySQL Backend Developer Interview/1-javascript-fundamentals.html
+++ b/courses/Node.js + MySQL Backend Developer Interview/1-javascript-fundamentals.html
@@ -5284,5 +5284,7 @@ console.log('=== Confusing expressions explanation complete ===');
         
 
     </script>
+    <script src="../sidebar-fix.js"></script>
+
 </body>
 </html>
