--- a/courses/Node.js + MySQL Backend Developer Interview/2-nodejs-core-concept.html
+++ b/courses/Node.js + MySQL Backend Developer Interview/2-nodejs-core-concept.html
@@ -7136,5 +7136,7 @@ app.get('/health', (req, res) =&gt; {
         
 
     </script>
+    <script src="../sidebar-fix.js"></script>
+
 </body>
 </html>
