--- a/courses/Node.js + MySQL Backend Developer Interview/4-asynchronous-programming.html
+++ b/courses/Node.js + MySQL Backend Developer Interview/4-asynchronous-programming.html
@@ -2496,5 +2496,6 @@ async function processWithConcurrency(items, asyncFn, concurrency = 5) {
         
 
     </script>
+    <script src="../sidebar-fix.js"></script>
 </body>
 </html>
