--- a/courses/Node.js + MySQL Backend Developer Interview/5-mysql-database-fundamentals.html
+++ b/courses/Node.js + MySQL Backend Developer Interview/5-mysql-database-fundamentals.html
@@ -1742,5 +1742,6 @@ SELECT product_name, 'Out of Stock' as status FROM products WHERE quantity = 0;
         
 
     </script>
+    <script src="../sidebar-fix.js"></script>
 </body>
 </html>
