--- a/courses/Node.js + MySQL Backend Developer Interview/8-authentication--security.html
+++ b/courses/Node.js + MySQL Backend Developer Interview/8-authentication--security.html
@@ -1388,5 +1388,6 @@ function hasPermission(userRole, action) {
         
 
     </script>
+    <script src="../sidebar-fix.js"></script>
 </body>
 </html>
