--- a/courses/Node.js + MySQL Backend Developer Interview/9-api-design--best-practices.html
+++ b/courses/Node.js + MySQL Backend Developer Interview/9-api-design--best-practices.html
@@ -1152,5 +1152,6 @@ Last-Modified: Wed, 21 Oct 2023 07:28:00 GMT
         
 
     </script>
+    <script src="../sidebar-fix.js"></script>
 </body>
 </html>
